@@ -1,10 +1,12 @@
 package io.weaviate.client6.v1.api.collections.data;
 
 import java.util.Collections;
+import java.util.Map;
 import java.util.function.Function;
 
 import com.google.gson.reflect.TypeToken;
 
+import io.weaviate.client6.v1.api.collections.CollectionHandleDefaults;
 import io.weaviate.client6.v1.api.collections.ObjectMetadata;
 import io.weaviate.client6.v1.api.collections.Vectors;
 import io.weaviate.client6.v1.api.collections.WeaviateObject;
@@ -18,16 +20,21 @@ public record InsertObjectRequest<T>(WeaviateObject<T, Reference, ObjectMetadata
 
   @SuppressWarnings("unchecked")
   public static final <T> Endpoint<InsertObjectRequest<T>, WeaviateObject<T, Object, ObjectMetadata>> endpoint(
-      CollectionDescriptor<T> descriptor) {
+      CollectionDescriptor<T> collection,
+      CollectionHandleDefaults defaults) {
     return new SimpleEndpoint<>(
         request -> "POST",
         request -> "/objects/",
-        request -> Collections.emptyMap(),
-        request -> JSON.serialize(request.object, TypeToken.getParameterized(
-            WeaviateObject.class, descriptor.typeToken().getType(), Reference.class, ObjectMetadata.class)),
+        request -> defaults.consistencyLevel() != null
+            ? Map.of("consistency_level", defaults.consistencyLevel())
+            : Collections.emptyMap(),
+        request -> JSON.serialize(
+            new WriteWeaviateObject<>(request.object, defaults.tenant()),
+            TypeToken.getParameterized(
+                WriteWeaviateObject.class, collection.typeToken().getType())),
         (statusCode, response) -> JSON.deserialize(response,
             (TypeToken<WeaviateObject<T, Object, ObjectMetadata>>) TypeToken.getParameterized(
-                WeaviateObject.class, descriptor.typeToken().getType(), Object.class, ObjectMetadata.class)));
+                WeaviateObject.class, collection.typeToken().getType(), Object.class, ObjectMetadata.class)));
   }
 
   public static <T> InsertObjectRequest<T> of(String collectionName, T properties) {
@@ -72,4 +79,5 @@ public record InsertObjectRequest<T>(WeaviateObject<T, Reference, ObjectMetadata
       return new InsertObjectRequest<>(this);
     }
   }
+
 }
